--- a/index.html
+++ b/index.html
@@ -15,16 +15,20 @@
     <!--Display Clock-->
     
 
-        <div class="display">     </div>
-            <div class="btns">
-                    <div class="btns-c">
-    <button class="btn"><i class="fa fa-camera-retro"></i></button>
-    <button class="btn"><i class="fa fa-shower" aria-hidden="true"></i>
-    </button>
-    <button class="btn"><i class="fa fa-music" aria-hidden="true"></i></button>
-    <button class="btn"><i class="fa fa-phone" aria-hidden="true"></i></button>
-    </div>
+        <div id="display" class="display">     </div>
+            <div id="btns" class="btns">
+                    <div id="c" class="btns-c">
+  
+    <button id="btn" onclick="off()" class="btn"><i class="fa fa-power-off" aria-hidden="true"></i>
+    </button> 
+    <button id="btn2" class="btn"><i class="fa fa-camera-retro"></i></button>
+
+    <button onclick="musicaChique()" id="btn3" class="btn"><i class="fa fa-music" aria-hidden="true"></i></button>
+
+    <button id="btn4" class="btn"><i class="fa fa-phone" aria-hidden="true"></i></button>
     
+    </div>
+    <button class="reforce"></button>
         </div>
     </div>
 
