--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   
     <button id="btn" onclick="off()" class="btn"><i class="fa fa-power-off" aria-hidden="true"></i>
     </button> 
-    <button id="btn2" class="btn"><i class="fa fa-camera-retro"></i></button>
+    <button id="btnSom" class="btn"><i class="fa fa-camera-retro"></i></button>
 
     <button onclick="musicaChique()" id="btn3" class="btn"><i class="fa fa-music" aria-hidden="true"></i></button>
 
