--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </button> 
     <button id="btnSom" class="btn"><i class="fa fa-camera-retro"></i></button>
 
-    <button onclick="musicaChique()" id="btn3" class="btn"><i class="fa fa-music" aria-hidden="true"></i></button>
+    <button  id="btnSom2" class="btn"><i class="fa fa-music" aria-hidden="true"></i></button>
 
     <button id="btn4" class="btn"><i class="fa fa-phone" aria-hidden="true"></i></button>
     
