--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <!--Clock Body-->
     <div class="clock">
     <!--Display Clock-->
-    
+    <i id="star" class="fa fa-star" aria-hidden="true"></i>
+    <h1>ChiquerrimoClock</h1>
 
         <div id="display" class="display">     </div>
             <div id="btns" class="btns">
@@ -25,10 +26,13 @@
 
     <button  id="btnSom2" class="btn"><i class="fa fa-music" aria-hidden="true"></i></button>
 
-    <button id="btn4" class="btn"><i class="fa fa-phone" aria-hidden="true"></i></button>
+    <button id="btnSom3" class="btn"><i class="fa fa-phone" aria-hidden="true"></i></button>
+
+       <button id="btnSom4" class="btn"><i class="fa fa-clock-o" aria-hidden="true"></i></button>
     
+
     </div>
-    <button class="reforce"></button>
+   
         </div>
     </div>
 
