--- a/index.html
+++ b/index.html
@@ -36,7 +36,13 @@
         </div>
     </div>
 
-
+<footer>
+    Por Marco Marchi <br>
+    <div class="icons">
+    <a href="https://github.com/MarquinCss"><i class="fa fa-github" aria-hidden="true"></i></a>
+    <a href="https://www.linkedin.com/in/marcoant%C3%B4niomarchicarreiro/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+</div>
+</footer>
 <script src="main.js"></script>
 </body>
 </html>
